gcc-14.2.0/gcc/testsuite/gdc.test/compilable/imports/testlambda2.d
version https://git-lfs.github.com/spec/v1
oid sha256:33c2c92fdd2fc666f0e770436205da947c61be6af95283ba185a98d8bb8edc17
size 53
